add shippingDetails view and connect UI
Co-authored-by: Trent Dietzel <dietzelbiz@outlook.com>

--- a/Parcels/Views/Home/Home.cshtml
+++ b/Parcels/Views/Home/Home.cshtml
@@ -10,7 +10,7 @@
 <body>
   <h1>Shipping</h1>
   <p></p>
-  <form action="/shipping-details" method="post">
+  <form action="/shippingDetails" method="post">
     <label for="height">Item's Height</label>
     <input id="height" name="height" type="int">
     <label for="length">Item's Length</label>
