WIP conditional error handling
Co-authored-by: Trent Dietzel <dietzelbiz@outlook.com>

--- a/Parcels/Views/ShippingDetails/shippingDetails.cshtml
+++ b/Parcels/Views/ShippingDetails/shippingDetails.cshtml
@@ -15,6 +15,7 @@
 <p>Package Weight: @Model.Properties["weight"]</p>
 
 <p>Cost to Ship: $@Model.CostToShip()</p>
+<a href="/">Ship something else</a>
 </body>
 
 </html>
