--- a/Parcels/Views/Home/Home.cshtml
+++ b/Parcels/Views/Home/Home.cshtml
@@ -5,12 +5,32 @@
   <title>Shipping</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <meta charset='utf-8'>
+  <script>
+    function validateForm() {
+      var height = document.getElementById("height").value;
+      var length = document.getElementById("length").value;
+      var width = document.getElementById("width").value;
+      var weight = document.getElementById("weight").value;
+
+      if (height <= 0  || length <= 0 || width <= 0 || weight  <= 0) 
+      {
+        <p> Please enter a postive number in each form</p>
+        return false;
+      } 
+      else if (isNaN(height) || isNaN(length) || isNaN(width) || isNaN(weight)) {
+        <p>"Please enter only integers"</p>;
+        return false;
+      } else {
+        return true;
+      }
+    }
+  </script>
 </head>
 
 <body>
   <h1>Shipping</h1>
   <p></p>
-  <form action="/shippingDetails" method="post">
+  <form action="/shippingDetails" method="post" onsubmit="return validateForm()">
     <label for="height">Item's Height</label>
     <input id="height" name="height" type="int">
     <label for="length">Item's Length</label>
@@ -24,3 +44,4 @@
 </body>
 
 </html>
+
